--- a/code/song-data-extraction.ipynb
+++ b/code/song-data-extraction.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsfg\n"
+      "Giant Steps\n"
      ]
     },
     {
@@ -406,8 +406,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=15'>16</a>\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=16'>17</a>\u001b[0m \u001b[39mif\u001b[39;00m switch:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=17'>18</a>\u001b[0m     album_id \u001b[39m=\u001b[39m get_spotify_album(row[\u001b[39m'\u001b[39;49m\u001b[39mAlbum\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=18'>19</a>\u001b[0m     \u001b[39mif\u001b[39;00m index\u001b[39m%\u001b[39m\u001b[39m500\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=19'>20</a>\u001b[0m         token \u001b[39m=\u001b[39m spotipy\u001b[39m.\u001b[39mutil\u001b[39m.\u001b[39mprompt_for_user_token(\u001b[39m'\u001b[39m\u001b[39msgtpepurr\u001b[39m\u001b[39m'\u001b[39m,SCOPES,client_id\u001b[39m=\u001b[39mCLIENT_ID,client_secret\u001b[39m=\u001b[39mCLIENT_SECRET,redirect_uri\u001b[39m=\u001b[39mREDIRECT_URI)\n",
-      "\u001b[1;32m/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb Cell 5'\u001b[0m in \u001b[0;36mget_spotify_album\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_spotify_album\u001b[39m(name): \n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=2'>3</a>\u001b[0m     search_res \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39;49msearch(q\u001b[39m=\u001b[39;49mname, \u001b[39mtype\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39malbum\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(search_res[\u001b[39m'\u001b[39m\u001b[39malbums\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m are_same_albums(search_res[\u001b[39m'\u001b[39m\u001b[39malbums\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m], name):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=4'>5</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m search_res[\u001b[39m'\u001b[39m\u001b[39malbums\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39muri\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;32m/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=10'>11</a>\u001b[0m switch \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m index, row \u001b[39min\u001b[39;00m rym_df\u001b[39m.\u001b[39miterrows():\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=12'>13</a>\u001b[0m     \u001b[39m# if row['Album'] == 'The Main Ingredient':\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=13'>14</a>\u001b[0m     \u001b[39m#     print('dsfg')\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=18'>19</a>\u001b[0m     \u001b[39m#     album_id = get_spotify_album(row['Album'])\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=19'>20</a>\u001b[0m     \u001b[39m#     print(album_id)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=20'>21</a>\u001b[0m     album_id \u001b[39m=\u001b[39m get_spotify_album(row[\u001b[39m'\u001b[39;49m\u001b[39mAlbum\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=21'>22</a>\u001b[0m     \u001b[39mif\u001b[39;00m album_id \u001b[39m!=\u001b[39m NOT_FOUND:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000012?line=22'>23</a>\u001b[0m         tracks \u001b[39m=\u001b[39m get_album_tracks(album_id\u001b[39m=\u001b[39malbum_id)\n",
+      "\u001b[1;32m/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb Cell 5'\u001b[0m in \u001b[0;36mget_spotify_album\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_spotify_album\u001b[39m(name): \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(name)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=3'>4</a>\u001b[0m     search_res \u001b[39m=\u001b[39m sp\u001b[39m.\u001b[39;49msearch(q\u001b[39m=\u001b[39;49mname, \u001b[39mtype\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39malbum\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpp\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/code/song-data-extraction.ipynb#ch0000011?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(search_res[\u001b[39m'\u001b[39m\u001b[39malbums\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m \u001b[39mand\u001b[39;00m are_same_albums(search_res[\u001b[39m'\u001b[39m\u001b[39malbums\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m], name):\n",
       "File \u001b[0;32m~/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py:553\u001b[0m, in \u001b[0;36mSpotify.search\u001b[0;34m(self, q, limit, offset, type, market)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=537'>538</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msearch\u001b[39m(\u001b[39mself\u001b[39m, q, limit\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, offset\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, \u001b[39mtype\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtrack\u001b[39m\u001b[39m\"\u001b[39m, market\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=538'>539</a>\u001b[0m     \u001b[39m\"\"\" searches for an item\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=539'>540</a>\u001b[0m \n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=540'>541</a>\u001b[0m \u001b[39m        Parameters:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=550'>551</a>\u001b[0m \u001b[39m                       from_token.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=551'>552</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=552'>553</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get(\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=553'>554</a>\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39msearch\u001b[39;49m\u001b[39m\"\u001b[39;49m, q\u001b[39m=\u001b[39;49mq, limit\u001b[39m=\u001b[39;49mlimit, offset\u001b[39m=\u001b[39;49moffset, \u001b[39mtype\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39mtype\u001b[39;49m, market\u001b[39m=\u001b[39;49mmarket\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=554'>555</a>\u001b[0m     )\n",
       "File \u001b[0;32m~/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py:297\u001b[0m, in \u001b[0;36mSpotify._get\u001b[0;34m(self, url, args, payload, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=293'>294</a>\u001b[0m \u001b[39mif\u001b[39;00m args:\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=294'>295</a>\u001b[0m     kwargs\u001b[39m.\u001b[39mupdate(args)\n\u001b[0;32m--> <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=296'>297</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_internal_call(\u001b[39m\"\u001b[39;49m\u001b[39mGET\u001b[39;49m\u001b[39m\"\u001b[39;49m, url, payload, kwargs)\n",
       "File \u001b[0;32m~/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py:240\u001b[0m, in \u001b[0;36mSpotify._internal_call\u001b[0;34m(self, method, url, payload, params)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=235'>236</a>\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39m'\u001b[39m\u001b[39mSending \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m to \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m with Params: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m Headers: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m and Body: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=236'>237</a>\u001b[0m              method, url, args\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mparams\u001b[39m\u001b[39m\"\u001b[39m), headers, args\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=238'>239</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=239'>240</a>\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_session\u001b[39m.\u001b[39;49mrequest(\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=240'>241</a>\u001b[0m         method, url, headers\u001b[39m=\u001b[39;49mheaders, proxies\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mproxies,\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=241'>242</a>\u001b[0m         timeout\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrequests_timeout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49margs\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=242'>243</a>\u001b[0m     )\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=244'>245</a>\u001b[0m     response\u001b[39m.\u001b[39mraise_for_status()\n\u001b[1;32m    <a href='file:///Users/adityakanthale/Documents/padhai/cs418/spotify-data-science/env/lib/python3.8/site-packages/spotipy/client.py?line=245'>246</a>\u001b[0m     results \u001b[39m=\u001b[39m response\u001b[39m.\u001b[39mjson()\n",
@@ -434,25 +434,28 @@
     "\n",
     "switch = False\n",
     "for index, row in rym_df.iterrows():\n",
-    "    if row['Album'] == 'The Main Ingredient':\n",
-    "        print('dsfg')\n",
-    "        switch = True\n",
-    "        continue\n",
-    "    if switch:\n",
-    "        album_id = get_spotify_album(row['Album'])s\n",
-    "        if album_id != NOT_FOUND:\n",
-    "            tracks = get_album_tracks(album_id=album_id)\n",
-    "            curr_features = sp.audio_features(tracks)\n",
-    "            for d in curr_features:\n",
-    "                if d and set(audio_features_cols) == set(d.keys()):\n",
-    "                    # add rym columns\n",
-    "                    add_keys(row, d, rym_columns)\n",
-    "                    # add song metadata\n",
-    "                    song_meta = sp.track(d['id'])\n",
-    "                    add_keys(song_meta, d, song_meta_cols)\n",
-    "                    track_features.append(d)\n",
-    "                    did,aid = d['id'], row['Album']\n",
-    "                    print(f'Songs added for {did}, {aid}')"
+    "    # if row['Album'] == 'The Main Ingredient':\n",
+    "    #     print('dsfg')\n",
+    "    #     switch = True\n",
+    "    #     continue\n",
+    "    # if switch:\n",
+    "    #     print(row['Album'])\n",
+    "    #     album_id = get_spotify_album(row['Album'])\n",
+    "    #     print(album_id)\n",
+    "    album_id = get_spotify_album(row['Album'])\n",
+    "    if album_id != NOT_FOUND:\n",
+    "        tracks = get_album_tracks(album_id=album_id)\n",
+    "        curr_features = sp.audio_features(tracks)\n",
+    "        for d in curr_features:\n",
+    "            if d and set(audio_features_cols) == set(d.keys()):\n",
+    "                # add rym columns\n",
+    "                add_keys(row, d, rym_columns)\n",
+    "                # add song metadata\n",
+    "                song_meta = sp.track(d['id'])\n",
+    "                add_keys(song_meta, d, song_meta_cols)\n",
+    "                track_features.append(d)\n",
+    "                did,aid = d['id'], row['Album']\n",
+    "                print(f'Songs added for {did}, {aid}')"
    ]
   },
   {
@@ -731,46 +734,6 @@
     "            tabular_features[k].append(v)\n",
     "song_feature_df = pd.DataFrame(tabular_features)\n",
     "song_feature_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(columns) == set(tf[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo', 'type', 'id', 'uri', 'track_href', 'analysis_url', 'duration_ms', 'time_signature'])"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf[0].keys()"
    ]
   },
   {
