added rym rating vs popularity scatterplot

--- a/code/eda.ipynb
+++ b/code/eda.ipynb
@@ -590,6 +590,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our preliminary EDA shows there is a strong bias, on the top 20 songs from Rate Your Music's community. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -624,6 +631,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -654,6 +666,11 @@
    "source": [
     "df.plot.scatter(x='rym rating',y='popularity')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
