add home header

--- a/code/progress-report.ipynb
+++ b/code/progress-report.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1>\n",
+    "<a href=\"https://stoic-devv.github.io/spotify-data-science/\">spotify-data-science</a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Progress report"
    ]
   },
