preliminary eda in progress report

--- a/code/progress-report.ipynb
+++ b/code/progress-report.ipynb
@@ -884,7 +884,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis"
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "1. After creating a correlation matrix, we found there are only a couple variables that have a strong correlation between each other. For example, acousticness and energy had a higher correlation of -.8.\n",
+    "\n",
+    "2. Our preliminary EDA shows there is a strong bias, on the top 20 genres from Rate Your Music's community. The top 5 genres include Baroque Music, Film Score, Romanticism, Pop Rock, and Modern Classical would not be the top genres for other websites as these ratings depend on the community of rateyourmusic. \n",
+    "\n",
+    "3. Looking at Pop Rock specifically over the years, there is a peak of pop rock genre songs in 1968. \n",
+    "\n",
+    "4. The dataset comes from Rateyourmusic and Spotify. The rym rating is from Rateyourmusic and popularity is from Spotify. When comparing those metrics, there is an almost 0 correlation. From this, we can also say there is a huge bias from the Rateyourmusic's community, as Spotify is more telling of music metrics that is more mainstream.\n",
+    "\n",
+    "5. Some methods we used to explore the data were bar graphs, a correlation matrix, and line plots.\n",
+    "\n",
+    "6. The summary of the data can be found above, where df.describe() was called."
    ]
   },
   {
