update with eda ipynb link

--- a/code/progress-report.ipynb
+++ b/code/progress-report.ipynb
@@ -905,7 +905,7 @@
     "\n",
     "5. Some methods we used to explore the data were bar graphs, a correlation matrix, and line plots.\n",
     "\n",
-    "6. The summary of the data can be found above, where df.describe() was called."
+    "6. Find our initial EDA [here](https://github.com/stoic-devv/spotify-data-science/blob/main/code/eda.ipynb). We plan to do more work on EDA since our most of our time was spent in data collection and cleaning."
    ]
   },
   {
