update with column spec

--- a/code/progress-report.ipynb
+++ b/code/progress-report.ipynb
@@ -298,6 +298,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Spec\n",
+    "1. Audio features:\n",
+    "'danceability', 'energy', 'key', 'loudness', 'mode',\n",
+    "'speechiness', 'acousticness', 'instrumentalness', 'liveness',\n",
+    "'valence', 'tempo', 'type', 'uri', 'duration_ms', 'time_signature',\n",
+    "\n",
+    "2. Song metadata:\n",
+    "'id', 'name', 'album', 'date', 'genres', 'track_href', 'analysis_url', 'popularity'\n",
+    "\n",
+    "3. Ratings from RYM\n",
+    "'rym rating', 'ratings', 'reviews'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
