--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -1145,39 +1145,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://api.spotify.com/v1/tracks/1c9oVo4jlOb18cIPuqGrwE'"
+       "'https://api.spotify.com/v1/tracks/3Xd8m6dPYGFVFSwi4o0tnK'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.track_href[600]"
+    "df.track_href[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[600]\n"
+      "[5]\n"
      ]
     }
    ],
    "source": [
-    "hreflike = 'https://api.spotify.com/v1/tracks/1c9oVo4jlOb18cIPuqGrwE'\n",
+    "hreflike = 'https://api.spotify.com/v1/tracks/3Xd8m6dPYGFVFSwi4o0tnK'\n",
     "def get_index_from_href(href):\n",
     "    return df.index[df['track_href'] == href].tolist()\n",
     "\n",
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1230,27 +1230,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.994981</td>\n",
+       "      <td>0.996849</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.016026</td>\n",
+       "      <td>0.012633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>0.051363</td>\n",
+       "      <td>0.121017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.995839</td>\n",
+       "      <td>0.997154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.999153</td>\n",
+       "      <td>0.998651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.999843</td>\n",
+       "      <td>0.999586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1263,16 +1263,16 @@
       "text/plain": [
        "                 0\n",
        "count  7252.000000\n",
-       "mean      0.994981\n",
-       "std       0.016026\n",
-       "min       0.051363\n",
-       "25%       0.995839\n",
-       "50%       0.999153\n",
-       "75%       0.999843\n",
+       "mean      0.996849\n",
+       "std       0.012633\n",
+       "min       0.121017\n",
+       "25%       0.997154\n",
+       "50%       0.998651\n",
+       "75%       0.999586\n",
        "max       1.000000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,17 +1285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3194, 3470, 6026, 7225, 6687, 3482, 1861, 1365, 6587,  515, 3038,\n",
-       "       3737, 4739, 7052, 1710])"
+       "array([2644, 2137, 3620, 5001, 2284, 6428,  756, 1552, 3659, 5796, 6466,\n",
+       "       4029, 1215, 4971,  845])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,10 +1307,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loudness                                                      -12.906\n",
+       "mode                                                                1\n",
+       "speechiness                                                    0.0491\n",
+       "acousticness                                                    0.854\n",
+       "instrumentalness                                                  0.0\n",
+       "liveness                                                        0.105\n",
+       "valence                                                         0.116\n",
+       "tempo                                                         106.094\n",
+       "track_href          https://api.spotify.com/v1/tracks/3Xd8m6dPYGFV...\n",
+       "sp_genres           cantautor latin alternative nueva cancion rock...\n",
+       "Name: 5, dtype: object"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.iloc[2654]"
+   ]
   },
   {
    "cell_type": "markdown",
