--- a/code/model.ipynb
+++ b/code/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "Name: rymspot rate, dtype: float64"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[7252 rows x 8 columns]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7406507308933946\n"
+      "0.7380028292647539\n"
      ]
     }
    ],
@@ -284,21 +284,22 @@
     "    naive = gnb.fit(X_train,y_train)\n",
     "    y_pred = naive.predict(X_test)\n",
     "\n",
-    "    scores += [accuracy_score(y_test, y_pred)]\n",
+    "    scores += [accuracy_score(y_test, y_pred)] \n",
     "    \n",
     "print(sum(scores)/len(scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7158039827342304\n"
+      "[0.72915231 0.70778773 0.70965517 0.74689655 0.72758621]\n",
+      "0.7160941637346295\n"
      ]
     }
    ],
@@ -313,38 +314,37 @@
     "    y_pred = naive.predict(X_test)\n",
     "\n",
     "    scores += [accuracy_score(y_test, y_pred)]\n",
-    "    \n",
     "print(sum(scores)/len(scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7133011716057907\n",
-      "0.7274293590627158\n",
-      "0.7282334022513182\n",
-      "0.7331150930392832\n",
-      "0.7301171605789099\n",
-      "0.7345508844475022\n",
-      "0.7323028453283417\n",
-      "0.7292384562370813\n",
-      "0.7288460065854981\n",
-      "0.7279117849758768\n",
-      "0.726896810976756\n",
-      "0.7251320928095576\n",
-      "0.7250172294969038\n",
-      "0.7228020084670708\n",
-      "0.7210199862164078\n",
-      "0.7192884217780872\n",
-      "0.7169903109417418\n",
-      "0.7144115169614768\n",
-      "0.7117414487286396\n"
+      "0.7029634734665742\n",
+      "0.7174362508614781\n",
+      "0.7137606248564218\n",
+      "0.7196760854583085\n",
+      "0.7235010337698141\n",
+      "0.7253618194348743\n",
+      "0.7260017721768282\n",
+      "0.7263094417643091\n",
+      "0.7246343517880482\n",
+      "0.7228118538938771\n",
+      "0.7231376480170516\n",
+      "0.7216861934298285\n",
+      "0.7201399565286659\n",
+      "0.719700699025311\n",
+      "0.7167930163106015\n",
+      "0.7145072363887025\n",
+      "0.7111930919852418\n",
+      "0.7097021211425057\n",
+      "0.706228009721064\n"
      ]
     }
    ],
@@ -367,52 +367,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7277062740228912\n"
+      "[0.72915231 0.70778773 0.70965517 0.74689655 0.72758621]\n",
+      "0.7283308620317579\n"
      ]
     }
    ],
    "source": [
     "from sklearn import tree\n",
-    "\n",
     "scores = []\n",
-    "for x in range(1,500):\n",
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "# X_train, X_test, y_train,y_test =train_test_split(\n",
+    "#                                          X, labels, test_size = 0.2)\n",
+    "print(cross_val_score(xgb.XGBClassifier(), X,labels) )\n",
+    "scores2 = []\n",
+    "for x in range(1,100):\n",
+    "    \n",
     "    X_train, X_test, y_train,y_test =train_test_split(\n",
     "                                         X, labels, test_size = 0.2)\n",
     "    gnb = tree.DecisionTreeClassifier(random_state = 0, max_depth=7)\n",
     "    naive = gnb.fit(X_train,y_train)\n",
+    "    boost = xgb.XGBClassifier()\n",
+    "    bo = boost.fit(X_train,y_train)\n",
     "    y_pred = naive.predict(X_test)\n",
-    "\n",
+    "    y_pred2 = bo.predict(X_test)\n",
     "    scores += [accuracy_score(y_test, y_pred)]\n",
+    "    scores2 += [accuracy_score(y_test,y_pred2)]\n",
     "\n",
     "print(sum(scores)/len(scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7050310130944173\n",
-      "0.7098552722260499\n",
-      "0.713301171605787\n",
-      "0.7179531357684358\n",
-      "0.7172984148862863\n",
-      "0.7166322076728706\n",
-      "0.7149748941616624\n",
-      "0.7165747760165386\n",
-      "0.7153687112336315\n",
-      "0.71564438318401\n"
+      "0.747189329546325\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(scores2)/len(scores2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7188146106133706\n",
+      "0.7177808407994491\n",
+      "0.7172065242361613\n",
+      "0.7172639558924914\n",
+      "0.7192281185389391\n",
+      "0.7231794164943702\n",
+      "0.7211775130451892\n",
+      "0.7204514128187435\n",
+      "0.7191209127804573\n",
+      "0.7188835286009664\n"
      ]
     }
    ],
@@ -436,14 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7053373152615059\n"
+      "0.704696865275776\n"
      ]
     }
    ],
@@ -465,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +832,7 @@
        "[7252 rows x 10 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1077,7 @@
        "[7252 rows x 10 columns]"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1156,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1198,7 @@
        "Name: name, Length: 7252, dtype: object"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1352,7 @@
        "max       1.000000"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1459,7 @@
        "[7252 rows x 1 columns]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,6 +1474,25 @@
    "source": [
     "https://towardsdatascience.com/using-cosine-similarity-to-build-a-movie-recommendation-system-ae7f20842599"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Xtrain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/pinru/spotifycs418/spotify-data-science/code/model.ipynb Cell 31'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/pinru/spotifycs418/spotify-data-science/code/model.ipynb#ch0000031vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mxgboost\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mxgb\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/pinru/spotifycs418/spotify-data-science/code/model.ipynb#ch0000031vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m cross_val_score\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/pinru/spotifycs418/spotify-data-science/code/model.ipynb#ch0000031vscode-remote?line=2'>3</a>\u001b[0m cross_val_score(xgb\u001b[39m.\u001b[39mXGBClassifier(), Xtrain,ytrain)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Xtrain' is not defined"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
