--- a/code/merge-data.ipynb
+++ b/code/merge-data.ipynb
@@ -3318,6 +3318,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness',\n",
+       "       'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo',\n",
+       "       'type', 'id', 'uri', 'track_href', 'analysis_url', 'duration_ms',\n",
+       "       'time_signature', 'album', 'date', 'rym rating', 'ratings', 'reviews',\n",
+       "       'name', 'popularity', 'rym_genres', 'sp_genres', 'genre'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_features = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo','type']\n",
+    "meta_data_features = ['id', 'uri', 'track_href', 'analysis_url', 'duration_ms', 'time_signature', 'name', 'album', 'date']\n",
+    "user_rating_features = ['rym rating', 'ratings', 'reviews']\n",
+    "labels = ['popularity', 'rym_genres', 'sp_genres'] # depending on problem statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 9 3 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(audio_features), len(meta_data_features), len(user_rating_features), len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7252"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def some_func(x):\n",
+    "    # do something\n",
+    "    # ['alternative rock', 'rock] => 'rock'\n",
+    "    pass\n",
+    "df['sp_genres'] = df['sp_genres'].apply(some_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
